Empresas recomendadas Notificaciones Editar perfil Sugerir empresa Historico de pedidos Funcion de pedidos terminada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".Splash"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,26 +25,24 @@
         <activity
             android:name=".Persona.RegistroPersona"
             android:configChanges="screenSize|orientation"
-            android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".Principal"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustNothing|stateHidden" />
-        <activity
-            android:name=".Empresa.InformacionEmpresa"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Empresa.InformacionEmpresa" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity android:name=".Producto.InformacionProducto" />
+        <activity android:name=".Login" />
         <activity
-            android:name=".Producto.InformacionProducto"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Login"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:name=".Persona.Notificaciones"
+            android:label="@string/title_activity_notificaciones" />
+        <activity android:name=".Empresa.SugerirEmpresa" />
+        <activity android:name=".Persona.EditarPerfil"></activity>
     </application>
 
 </manifest>
